install_jenkins.tf
//This Terraform Template creates a jenkins server on AWS EC2 Instance
//Jenkins server will run on Amazon Linux 2 with custom security group
//allowing SSH (22) and TCP (8080) connections from anywhere.
//User needs to select appropriate variables from "variable.tf" file when launching the instance.

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

provider "aws" {
  region = var.region
}

resource "aws_instance" "Terraform-Jenkins-Server" {
  ami                    = var.ec2_ami
  instance_type          = var.ec2_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.Terraform-Jenkins-Sec-Gr.id]
  user_data              = filebase64("${path.module}/install-jenkins.sh")
  tags = {
    Name = var.tags
  }
}

resource "aws_security_group" "Terraform-Jenkins-Sec-Gr" {
  name = var.secgrname
  tags = {
    Name = var.secgrname
  }

  ingress {
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    protocol    = "tcp"
    to_port     = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    protocol    = -1
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "jenkins" {
  value = "http://${aws_instance.Terraform-Jenkins-Server.public_ip}:8080"
}
